--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -44,13 +44,56 @@
 // .graphs-section {
 //  ADD THIS BACK IN WHEN YOU HAVE THE GRAPHS SECTION
 // }
+.graphs-section {
+    display: flex;
+    justify-content: space-evenly;
+}
+.grant-rates-by-office-graph-container,.grant-rates-over-time-container{
+    text-align: center;
+    height: 165px;
+    font-size: 1.5rem;
+    font-family: 'acumin';
+
+}
+.grant-rates-by-nationality-container {
+    text-align: center;
+    margin-bottom: 3%;
+    margin-left: -15px;
+    font-size: 1.5rem;
+    font-family: 'acumin';
+
+}
+.gr-office-img{
+    height: 165px;
+    width:320px;
+    margin-bottom: 10%;
+}
+.gr-nationality-img{
+    height: 175px;
+    width:200px;
+    margin-bottom: 7%;
+    margin-left: -15px;
+}
+.gr-overtime-img {
+    height: 165px;
+    width: 300px;
+    margin-bottom: 10%;
+}
+.grant-rates-by-office-graph-container >p{
+    margin-top: 0;
+    margin-bottom: 1em;
+    font-size: 1.5rem;
+}
+
+
 
 .view-more-data-btn-container {
     height: 44px;
-    width: 180px;
-    margin: 0 auto;
+    width: 300px;
+    margin: 0 auto 10%;
     text-align: center;
-    margin-bottom: 10%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .middle-section {
@@ -78,6 +121,46 @@
 // .bottom-section {
 //      ADD THIS BACK IN WHEN YOU HAVE A BOTTOM SECTION
 // }
+.bottom-section{
+    text-align: center;
+    margin-top:10%;
+}
+.bottom-section h1 {
+    font-size: 3.5rem;
+    font-family: 'moneta';
+    margin-bottom: 10%;
+   
+}
+.data-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5%;
+}
+
+
+.first-data-point-container .second-data-point-container .third-data-point-container {
+    width: 433px;
+}
+
+
+.data-container div h2 {
+    font-family: 'moneta';
+    font-size: 3rem;
+}
+
+
+.second-data-point-container h2{
+    font-family:"beatrice_regular";
+}
+
+.third-data-point-container h2 {
+    font-family: "beatrice";
+}
+.data-container div h3 {
+    font-family: 'acumin';
+    font-size: 1.2rem;
+}
+
 
 .back-to-top {
     width: 8%;
