--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -40,6 +40,23 @@
     color: @white;
     font-size: 1.2rem;
 }
+.auth-area{
+    display: block;
+}
+.auth-button{
+ 
+    text-align: center;
+    border-radius:15px;
+    cursor: pointer;
+    color: @white;
+    border: 1px solid #0153c5;
+    background-color: #005ce0;
+ 
+    
+   
+
+
+}
 
 // .graphs-section {
 //  ADD THIS BACK IN WHEN YOU HAVE THE GRAPHS SECTION
